Fixed responsiveness of content on mobile (final)

--- a/css/support-style.css
+++ b/css/support-style.css
@@ -65,7 +65,14 @@ body {
 }
 
 .first-content {
+    position: relative;
     margin: 10% 2% 0 2%;
+}
+
+.first-content img {
+    display: block;
+    width: 100%;
+    max-width: 100%;
 }
 
 .content {
@@ -109,16 +116,9 @@ body {
     font-size: 25px;
 }
 
-@media(max-width: 1500px) {
-    .content {
-        padding-bottom: 20%;
-    }
-}
+
 
 @media(max-width: 1200px) {
-    .content {
-        padding-bottom: 30%;
-    }
 
     .content h1 {
         font-size: 38px;
@@ -127,13 +127,14 @@ body {
     .content p {
         font-size: 22px;
     }
+
+    #search-icon {
+        margin-right: 30px;
+    }
 }
 
 
 @media(max-width: 992px) {
-    .content {
-        padding-bottom: 50%;
-    }
 
     .content h1 {
         font-size: 32px;
@@ -147,15 +148,63 @@ body {
 
 
 @media(max-width: 768px) {
-    .content {
-        width: fit-content;
-    }
-
     .content h1 {
-        font-size: 28px;
+        font-size: 20px;
+    }
+    .content p {
+        font-size: 16px;
     }
 
-    .content p {
-        font-size: 18px;
+    .form-control {
+        font-size: small;
+    }
+
+    .content {
+        padding: 20px;
+    }
+
+    #search-icon {
+        margin-right: 20px;
+        font-size: 20px;
     }
 }
+
+
+@media(max-width: 600px) {
+    .content h1 {
+        margin-bottom: 5%;
+        font-size: 18px;
+    }
+    .content p {
+        margin-bottom: 5%;
+        font-size: 14px;
+    }
+
+    .first-content {
+        margin-top: 20%;
+    }
+}
+
+
+
+@media(max-width: 460px) {
+    .content h1 {
+        margin-bottom: 3%;
+        font-size: 14px;
+    }
+    .content p {
+        margin-bottom: 3%;
+        font-size: 12px;
+    }
+
+    .form-group input {
+        height: 30px;
+        padding: 10px;
+    }
+
+    #search-icon {
+        font-size: 15px;
+        padding: 0;
+    }
+}
+
